--- a/src/Components/Dashboard/MenuList.css
+++ b/src/Components/Dashboard/MenuList.css
@@ -2,6 +2,7 @@
 
 * {
 	box-sizing: border-box;
+	
 }
 
 .courses-container {
@@ -12,7 +13,7 @@
 	justify-content: center;
 	flex-direction: column;
 	/* min-height: 100vh; */
-	margin: 0;
+	/* margin-bottom:70px ; */
 }
 
 
@@ -24,6 +25,7 @@
 	max-width: 100%;
 	margin: 20px;
 	overflow: hidden;
+	/* margin-bottom:'80px' */
 }
 
 .course h6 {
